unpackaged/main/default/objects/Legacy_Batch__c/fields/Batch_Operator__c.field-meta.xml
<CustomField>
    <fullName>Batch_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller created 2021</description>
    <label>Batch Operator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Legacy_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>