unpackaged/main/default/objects/Legacy_Batch__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Heller created 2021</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>