unpackaged/main/default/objects/Legacy_Batch__c/fields/Items_Entered__c.field-meta.xml
<CustomField>
    <fullName>Items_Entered__c</fullName>
    <description>Heller created 2021</description>
    <label>Items Entered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>