unpackaged/main/default/objects/Legacy_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Heller created 2021</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Configured</fullName>
            </value>
            <value>
                <fullName>Gift Entry In Progress</fullName>
            </value>
            <value>
                <fullName>Gift Entry Complete</fullName>
            </value>
            <value>
                <fullName>Partially Committed</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Capture Payment Scheduled</fullName>
            </value>
            <value>
                <fullName>Capture Payment Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>