unpackaged/main/default/objects/Legacy_Batch__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Heller created 2021</description>
    <label>Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>